--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -5376,6 +5376,16 @@
 								RelativePath=".\UsableScriptObject.h">
 							</File>
 						</Filter>
+						<Filter
+							Name="CollideVavidator"
+							Filter="">
+							<File
+								RelativePath=".\PHCollideValidator.cpp">
+							</File>
+							<File
+								RelativePath=".\PHCollideValidator.h">
+							</File>
+						</Filter>
 					</Filter>
 					<Filter
 						Name="Inventory"
