--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -2366,19 +2366,6 @@
 						Name="script"
 						Filter="">
 						<Filter
-							Name="script_monster"
-							Filter="">
-							<File
-								RelativePath=".\Ai\script\ai_script_monster.cpp">
-							</File>
-							<File
-								RelativePath=".\Ai\script\ai_script_monster.h">
-							</File>
-							<File
-								RelativePath=".\script_monster_space.h">
-							</File>
-						</Filter>
-						<Filter
 							Name="script_binder"
 							Filter="">
 							<File
@@ -2389,6 +2376,32 @@
 							</File>
 							<File
 								RelativePath=".\script_binder_inline.h">
+							</File>
+						</Filter>
+						<Filter
+							Name="script_entity"
+							Filter="">
+							<File
+								RelativePath=".\script_entity.cpp">
+							</File>
+							<File
+								RelativePath=".\script_entity.h">
+							</File>
+							<File
+								RelativePath=".\script_entity_inline.h">
+							</File>
+							<File
+								RelativePath=".\script_entity_space.h">
+							</File>
+						</Filter>
+						<Filter
+							Name="script_object"
+							Filter="">
+							<File
+								RelativePath=".\script_object.cpp">
+							</File>
+							<File
+								RelativePath=".\script_object.h">
 							</File>
 						</Filter>
 					</Filter>
