--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -309,7 +309,7 @@
 						RelativePath=".\Config\gameplay\dialogs_garbage.xml">
 					</File>
 					<File
-						RelativePath=".\dialogs_test.xml">
+						RelativePath=".\Config\gameplay\dialogs_test.xml">
 					</File>
 					<File
 						RelativePath=".\Config\gameplay\dialogs_yantar.xml">
