--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -6875,6 +6875,16 @@
 							</File>
 						</Filter>
 					</Filter>
+					<Filter
+						Name="!"
+						Filter="">
+						<File
+							RelativePath=".\trigger.cpp">
+						</File>
+						<File
+							RelativePath=".\trigger.h">
+						</File>
+					</Filter>
 				</Filter>
 				<Filter
 					Name="Game Materials"
