--- a/xrUpdate/xrUpdate.rc
+++ b/xrUpdate/xrUpdate.rc
@@ -216,9 +216,9 @@ EXSTYLE WS_EX_TOOLWINDOW
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     CONTROL         "",IDC_TREE1,"SysTreeView32",TVS_HASBUTTONS | 
-                    TVS_LINESATROOT | TVS_SHOWSELALWAYS | TVS_CHECKBOXES | 
-                    TVS_TRACKSELECT | WS_BORDER | WS_TABSTOP,7,7,207,190,
-                    WS_EX_CLIENTEDGE
+                    TVS_LINESATROOT | TVS_DISABLEDRAGDROP | 
+                    TVS_SHOWSELALWAYS | TVS_CHECKBOXES | TVS_TRACKSELECT | 
+                    WS_BORDER | WS_TABSTOP,7,7,207,190,WS_EX_CLIENTEDGE
     PUSHBUTTON      "Add new...",IDC_BUTTON1,7,200,50,14
     PUSHBUTTON      "",IDC_BUTTON2,225,89,277,141,NOT WS_VISIBLE,
                     WS_EX_CLIENTEDGE | WS_EX_STATICEDGE
