--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -734,6 +734,9 @@
 					RelativePath=".\scripts\ui_load_dialog.script">
 				</File>
 				<File
+					RelativePath=".\Scripts\ui_main_base_tab.script">
+				</File>
+				<File
 					RelativePath=".\scripts\ui_main_menu.script">
 				</File>
 				<File
