--- a/xrStalker/xrstalker.vcproj
+++ b/xrStalker/xrstalker.vcproj
@@ -788,6 +788,9 @@
 					RelativePath=".\scripts\ui_main_base_tab.script">
 				</File>
 				<File
+					RelativePath=".\Scripts\ui_main_main_tab.script">
+				</File>
+				<File
 					RelativePath=".\scripts\ui_main_menu.script">
 				</File>
 				<File
