--- a/sql_config/sql_config.vcproj
+++ b/sql_config/sql_config.vcproj
@@ -115,6 +115,9 @@
 	</References>
 	<Files>
 		<File
+			RelativePath=".\setupMSDE.ini">
+		</File>
+		<File
 			RelativePath=".\sql_config.cpp">
 			<FileConfiguration
 				Name="Debug|Win32">
