--- a/sql_config/sql_config.vcproj
+++ b/sql_config/sql_config.vcproj
@@ -4,6 +4,7 @@
 	Version="7.10"
 	Name="sql_config"
 	ProjectGUID="{D9C2BD1F-40F0-4D71-BBD9-2D69C12F0BE4}"
+	RootNamespace="sql_config"
 	SccProjectName="SAK"
 	SccAuxPath="SAK"
 	SccLocalPath="SAK"
@@ -16,7 +17,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="$(ProjectDir)"
 			IntermediateDirectory="Debug"
 			ConfigurationType="2"
 			CharacterSet="2">
@@ -65,7 +66,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="$(ProjectDir)"
 			IntermediateDirectory="Release"
 			ConfigurationType="2"
 			CharacterSet="2">
